--- a/src/pages/missions/missions.scss
+++ b/src/pages/missions/missions.scss
@@ -1,3 +1,16 @@
-page-missions {
+.ios {
+    page-missions {
+        ion-segment {
+            background: #c9001d;
+            padding: 5px;
+        }
+}
+}
 
+.android, .md, .wp {
+    page-missions {
+        ion-segment {
+            background: #c9001d;
+        }
+}
 }
